# MessingWithTransmutationCPP

./: CMakeLists.txt  README.md
src/: FindingRichestRegion.h  main.cpp
src/ArenaStack/: Arena.h  ArenaAlone.h  ArenaMultiType.h  ArenaStack.h  ArenaWithNext.h  FullAlone.h  FullArena.h  FullWithNext.h  IncreasableAlone.h  IncreasableArena.h  IncreasableWithNext.h  PaddingForTrans.h  TransFullAlone.h  TransFullWithNext.h  TransIncreasableAlone.h  TransIncreasableWithNext.h
src/Forest/: Bottom.h  DataNodeHandle.h  Forest.h  Lonely.h  Middle.h  Node.h  NodeHandle.h  NonBottom.h  NonTop.h  NormalBottom.h  NormalTop.h  Top.h  TransLonely.h  TransLonelyHolder.h  TransMiddle.h  TransNormalBottom.h  TransNormalTop.h  TransNormalTopHolder.h
src/GeneralLib/: PaddingForTrans.h
